<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="schEnabled"
                android:title="@string/schedule_enabled" >
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="sch15Min"
                android:dependency="schEnabled"
                android:summary="@string/schedule_notification_15_min_summary"
                android:title="@string/schedule_notification_15_min" >
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="sch5Min"
                android:dependency="schEnabled"
                android:summary="@string/schedule_notification_5_min_summary"
                android:title="@string/schedule_notification_5_min" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>