<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTIFICATION TYPES -->
    <header
            android:id="@+id/generalSettings"
            android:fragment="com.ismobile.blaagent.menuSettings.GeneralFragment"
            android:title="@string/general_settings" />
    <!-- LOCATION -->
    <header
            android:id="@+id/locationNotification"
            android:fragment="com.ismobile.blaagent.menuSettings.LocationFragment"
            android:title="@string/location_notification" />
    <!-- SCHEDULE -->
    <header
            android:id="@+id/scheduleNotification"
            android:fragment="com.ismobile.blaagent.menuSettings.ScheduleFragment"
            android:title="@string/schedule_notification" />


    <!-- INSERT HEADERS FOR NEW NOTIFICATION TYPES HERE -->


    <!-- ############################################## -->
    <header
            android:id="@+id/testScenario"
            android:fragment="com.ismobile.blaagent.menuSettings.TestFragment"
            android:title="@string/test_scenario" />
</preference-headers>